# runpod-llm-manager

./: .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  REAL_INTEGRATION_TEST_README.md  SECURITY.md  dependencies.py  llm_config.json  manage_pod.py  pod_config.json  proxy_fastapi.py  pyproject.toml  requirements.txt  sbom.json  security_report.json  security_utils.py  services.py  test-functional.sh  test_mocks.py  test_strategy.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
runpod_llm_manager/: config.py  dependencies.py  docker_builder.py  health_service.py  llm_service.py  manage_pod.py  metrics_service.py  pod_service.py  proxy_fastapi.py  proxy_fastapi_models.py  serverless_service.py  services.py
runpod_llm_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_tests.py
tests/: conftest.py  test_services.py
tests/fixtures/: mock_services.py  test_data.py
tests/functional/: conftest.py  test_api_functional.py  test_core_functionality.py  test_docker_functional.py  test_runpod_integration.py  test_vscode_integration.py  test_watchdogs.py
tests/integration/: test_docker_image_integration.py
tests/unit/: test_services.py
